--- a/json2sql/templates/json2sql/sometemplate.html
+++ b/json2sql/templates/json2sql/sometemplate.html
@@ -1,5 +1,10 @@
+{% extends "admin/base_site.html" %}
+
+{% block content %}
 <form action="/file/" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit" />
 </form>
+
+{% endblock %}
